--- a/style.css
+++ b/style.css
@@ -246,7 +246,8 @@ body{
 }
 .main{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    padding: 0 16px;
 }
 .mainsection{
     width:700px;
