--- a/style.css
+++ b/style.css
@@ -25,9 +25,12 @@
 }
 body{
     background: #f6f6f6;
-    padding: 0 16px;
+    padding:0 40px;
     width:1200px;
     margin: 0 auto;
+}
+.head{
+    padding-left: 40px;
 }
 .header{
     display: block;
@@ -161,7 +164,7 @@ body{
     display:flex;
 }
 .topright img{
-    margin-left: 160px;
+    margin-left: 60px;
     width:40px;
     height:40px;
     border-radius: 50%;
@@ -248,8 +251,6 @@ body{
 }
 .main{
     display: flex;
-    /* justify-content: center; */
-    padding: 0 32px;
 }
 .mainsection{
     width:700px;
