--- a/style.css
+++ b/style.css
@@ -23,15 +23,23 @@
     font-family: 'thin';
     src:url(./fonts/Lato-Thin.ttf);
 }
+body{
+    background: #f6f6f6;
+}
+.maincontainer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
 .container{
     background: #f6f6f6;
-    padding:0 20px;
-    width:100%;
+    padding:0 10px;
+    width:1200px;
     margin: 0 auto;
 }
 .head{
     padding-left: 40px;
-    width:1240px;
+    width:1170px;
 }
 .header{
     display: block;
@@ -179,7 +187,7 @@
     font-weight: 600;
 }
 .leftsection{
-    width:500px;
+    width:550px;
     margin-left: 40px;
     border:none;
     padding-top: 25px;
@@ -720,7 +728,7 @@
     padding-bottom: 20px;
 }
 .meeting3{
-    width:290px;
+    width:295px;
     height:270px;
     margin-bottom: 5px;
     border: none;
